# pokerl-map-viz

./: ConvertCoords.ipynb  LICENSE  README.md  index.html  package.json  visualizer.js  visualizer_live.js  visualizer_static.js  zoom_script.js
assets/: map_data.json
assets/icons/: site.webmanifest
example/: implementation.py  stream_agent_wrapper.py
large-scale-viz/: Cargo.toml  collect.py  convert_messages.ipynb  explore_messages.ipynb  explore_parquet_data.ipynb  generate_all_videos.sh  generate_hq_script.sh  map_explore.ipynb  run_from_gz_example.sh
large-scale-viz/extract_warps/: extract_warps.py  transitions_weak.json
large-scale-viz/high_perf_character_render/: Cargo.toml
large-scale-viz/high_perf_character_render/src/: lib.rs  main.rs  warp_validator.rs
large-scale-viz/high_perf_character_render/src/animation/: interpolator.rs  mod.rs
large-scale-viz/high_perf_character_render/src/data/: coordinate_mapper.rs  mod.rs  parquet_reader.rs  sprite_data.rs
large-scale-viz/high_perf_character_render/src/rendering/: gpu_context.rs  mod.rs  pipeline.rs  sprite_renderer.rs  texture_atlas.rs
large-scale-viz/high_perf_character_render/src/video/: encoder.rs  mod.rs
large-scale-viz/src/: main.rs
old_static_visualizer/: index_static.html  visualizer_static.js
old_static_visualizer/static_data_convert/: ConvertCoords.ipynb  game_map.py
ws-server/: index.js  package-lock.json  package.json
