[package]
name = "coords_counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
csv = "1.3.0"
flate2 = "1.0.30"
image = "0.25.2"
indicatif = "0.17.8"
jemallocator = "0.5.4"
memchr = "2.7.6"
rayon = "1.11.0"
serde = { version = "1.0.204", features = ["derive", "rc"] }
serde_json = "1.0.120"
tiff = "0.9.1"

[[bin]]
name = "extract_users"

[[bin]]
name = "coords_counter_fast_new"

#[[bin]]
#name = "extract_users_fast"

#[[bin]]
#name = "extract_users_fast_v2"
